--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "sass": "^1.54.0",
+    "socket.io": "^4.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
