--- a/server/package.json
+++ b/server/package.json
@@ -18,7 +18,8 @@
     "faker": "^6.6.6",
     "graphql": "^16.5.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.4"
+    "mongoose": "^6.4.4",
+    "socket.io": "^4.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
