--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "sass": "^1.54.0",
-    "socket.io": "^4.5.1"
+    "socket.io": "^4.5.1",
+    "socket.io-client": "4.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
