--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,18 @@
   "private": true,
   "type": "module",
   "proxy": "http://localhost:3001/",
+  "devDependencies": {
+    "@babel/core": "7.9.6",
+    "@babel/preset-env": "^7.10.3",
+    "@babel/preset-react": "7.9.4",
+    "babel-loader": "8.1.0",
+    "css-loader": "^3.5.3",
+    "html-webpack-plugin": "git://github.com/ScriptedAlchemy/html-webpack-plugin#master",
+    "style-loader": "1.2.1",
+    "webpack": "5.0.0",
+    "webpack-cli": "3.3.11",
+    "webpack-dev-server": "3.11.0"
+  },
   "dependencies": {
     "@apollo/client": "^3.3.16",
     "@testing-library/jest-dom": "^5.11.4",
@@ -12,9 +24,11 @@
     "echarts": "^5.3.3",
     "graphql": "^15.5.0",
     "jwt-decode": "^3.1.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "react-router-dom": "^6.2.1",
+    "shards-react": "^1.0.3",
+    "subscriptions-transport-ws": "^0.9.17",
     "react-scripts": "4.0.3",
     "sass": "^1.54.0",
     "socket.io": "^4.5.1",
