--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.1",
     "faker": "^6.6.6",
     "graphql": "^16.5.0",
+    "graphql-yoga": "^2.13.5",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.4",
     "socket.io": "^4.5.1"
