--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "@apollo/client": "^3.3.16",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
     "@nivo/core": "^0.79.0",
