--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/mschaaf17/Accommodations"
+  },
+  "dependencies": {
+    "date-fns": "^2.30.0"
   }
 }
