--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "faker": "^6.6.6",
     "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.1.8",
     "socket.io": "^4.5.1"
   },
