--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "apollo-server-express": "^3.6.2",
     "bcrypt": "^4.0.1",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "faker": "^6.6.6",
     "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.4",
     "mongoose": "^6.1.8",
+    "puppeteer": "^20.7.2",
     "socket.io": "^4.5.1"
   },
   "devDependencies": {
