--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,10 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.3",
-    "@nivo/core": "^0.79.0",
-    "@nivo/line": "^0.79.1",
+    "@nivo/core": "0.79.0",
+    "@nivo/line": "0.79.0",
+    "date-fns": "2.29.3",
+    "loader-utils": "3.2.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -31,12 +33,15 @@
     "socket.io": "^4.5.1",
     "socket.io-client": "4.4.0"
   },
+  "devDependencies": {
+    "@babel/runtime": "7.13.8",
+    "typescript": "4.1.3"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "generate": "npx babel-node scripts/server.js"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
