--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "date-fns": "^2.30.0",
     "moment": "^2.29.4",
+    "mongodb": "^5.6.0",
     "mongoose": "^7.1.1"
   }
 }
