--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cd client && npm run build"
+    "build": "cd client && npm run build",
+    "seed": "node server/seeders/seeds.js"
   },
   "author": "",
   "license": "ISC",
