--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/core": "^7.22.5",
     "@babel/node": "^7.22.5",
     "concurrently": "^5.1.0",
+    "prettier": "3.0.3",
     "puppeteer": "^20.7.2"
   },
   "repository": {
