--- a/client/package.json
+++ b/client/package.json
@@ -14,15 +14,15 @@
     "@mui/material": "^5.9.3",
     "@nivo/core": "0.79.0",
     "@nivo/line": "0.79.0",
-    "date-fns": "2.29.3",
-    "loader-utils": "3.2.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "date-fns": "2.29.3",
     "echarts": "^5.3.3",
     "echarts-for-react": "^3.0.2",
     "graphql": "^15.5.0",
     "jwt-decode": "^3.1.2",
+    "loader-utils": "3.2.1",
     "moment": "^2.29.4",
     "react": "^17.0.2",
     "react-bootstrap": "^2.5.0",
@@ -37,11 +37,13 @@
     "@babel/runtime": "7.13.8",
     "typescript": "4.1.3"
   },
+
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+ 
   },
   "eslintConfig": {
     "extends": [
